--- a/CashRegister/CashRegister/View/LoginView.xaml
+++ b/CashRegister/CashRegister/View/LoginView.xaml
@@ -5,11 +5,13 @@
              BackgroundColor="White">
     
     <ContentPage.Content>
-        <StackLayout HorizontalOptions="Center" VerticalOptions="Center">
-            <Label Style="{StaticResource TitleLabel}" Text="Login"/>
-            <Entry Placeholder="Email" x:Name="Email" Keyboard="Email"/>
-            <Entry Placeholder="Password" x:Name="Pass" IsPassword="true"/>
-            <Button Style="{StaticResource DefaultButton}" Text="Login" Clicked="Login"/>
-        </StackLayout>
+        <Frame Style="{StaticResource DefaultFrame}">
+            <StackLayout WidthRequest="200">
+                <Label Style="{StaticResource TitleLabel}" Text="Login" HorizontalOptions="Center"/>
+                <Entry Placeholder="Email" x:Name="Email" Keyboard="Email"/>
+                <Entry Placeholder="Password" x:Name="Pass" IsPassword="true"/>
+                <Button Style="{StaticResource DefaultButton}" Text="Login" Clicked="Login"/>
+            </StackLayout>
+        </Frame>
     </ContentPage.Content>
 </ContentPage>
