Modified login messages and colors

--- a/CashRegister/CashRegister/App.xaml
+++ b/CashRegister/CashRegister/App.xaml
@@ -6,7 +6,7 @@
         <!-- Button -->
         <Style x:Key="DefaultButton" TargetType="Button">
             <Setter Property="TextColor" Value="Black"/>
-            <Setter Property="BackgroundColor" Value="LightGray"/>
+            <Setter Property="BackgroundColor" Value="LightSteelBlue"/>
             <Setter Property="FontSize" Value="14"/>
         </Style>
 
