--- a/CashRegister/CashRegister/MainPage.xaml
+++ b/CashRegister/CashRegister/MainPage.xaml
@@ -6,8 +6,11 @@
              BackgroundColor="White">
 
     <Frame Style="{StaticResource DefaultFrame}">
-        <StackLayout Orientation="Vertical">
-            <Label Style="{StaticResource TitleLabel}" Text="Cas# Register" Margin="16"/>
+        <StackLayout Orientation="Vertical" WidthRequest="250">
+            <Label Style="{StaticResource TitleLabel}" Text="Cas# Register" HorizontalOptions="Center"/>
+            <Label HeightRequest="16"/>
+            <Label Style="{StaticResource BigLabel}" Text="Une application pour vendeurs et consommateurs" TextColor="Gray" HorizontalOptions="Center" HorizontalTextAlignment="Center"/>
+            <Label HeightRequest="8"/>
             <Button Style="{StaticResource DefaultButton}" Text="Sign up" x:Name="SignupButton" Clicked="ToSignup"/>
             <Button Style="{StaticResource DefaultButton}" Text="Login" x:Name="LoginButton" Clicked="ToLogin"/>
             <Button Style="{StaticResource DefaultButton}" Text="Logout" x:Name="LogoutButton" Clicked="Logout"/>
