--- a/CashRegister/CashRegister/View/LoginView.xaml
+++ b/CashRegister/CashRegister/View/LoginView.xaml
@@ -8,6 +8,7 @@
         <Frame Style="{StaticResource DefaultFrame}">
             <StackLayout WidthRequest="200">
                 <Label Style="{StaticResource TitleLabel}" Text="Login" HorizontalOptions="Center"/>
+                <Label HeightRequest="16"/>
                 <Entry Placeholder="Email" x:Name="Email" Keyboard="Email"/>
                 <Entry Placeholder="Password" x:Name="Pass" IsPassword="true"/>
                 <Button Style="{StaticResource DefaultButton}" Text="Login" Clicked="Login"/>
