--- a/CashRegister/CashRegister/View/SignupView.xaml
+++ b/CashRegister/CashRegister/View/SignupView.xaml
@@ -8,6 +8,7 @@
         <Frame Style="{StaticResource DefaultFrame}">
             <StackLayout WidthRequest="200">
                 <Label Style="{StaticResource TitleLabel}" Text="Sign up" HorizontalOptions="Center"/>
+                <Label HeightRequest="16"/>
                 <Entry Placeholder="Email" x:Name="Email" Keyboard="Email"/>
                 <Entry Placeholder="Password" x:Name="Pass" IsPassword="true"/>
                 <Entry Placeholder="Password confirmation" x:Name="PassConf" IsPassword="true"/>
