Moved payment and email

--- a/CashRegister/CashRegister/View/CashRegisterView.xaml
+++ b/CashRegister/CashRegister/View/CashRegisterView.xaml
@@ -89,7 +89,7 @@
                 <Frame Grid.Column="1" BackgroundColor="LightCoral" Padding="0" CornerRadius="4" HasShadow="False" WidthRequest="200">
                     <StackLayout  Orientation="Vertical">
                         <Label Style="{StaticResource BigLabel}" Text="{Binding TotalPrice, StringFormat='Total price:    {0:0.00}.-'}" Padding="4"/>
-                        <Button Style="{StaticResource DefaultButton}" Text="Send email" Clicked="SendEmail"/>
+                        <Button Style="{StaticResource DefaultButton}" Text="Go to payment" Clicked="ToPayment"/>
                     </StackLayout>
                 </Frame>
             </Grid>
