--- a/CashRegister/CashRegister/App.xaml
+++ b/CashRegister/CashRegister/App.xaml
@@ -16,6 +16,11 @@
             <Setter Property="FontSize" Value="14"/>
         </Style>
 
+        <Style x:Key="LittleLabel" TargetType="Label">
+            <Setter Property="TextColor" Value="Black"/>
+            <Setter Property="FontSize" Value="12"/>
+        </Style>
+
         <Style x:Key="BigLabel" TargetType="Label">
             <Setter Property="TextColor" Value="Black"/>
             <Setter Property="FontSize" Value="18"/>
