--- a/CashRegister/CashRegister/View/CashRegisterView.xaml
+++ b/CashRegister/CashRegister/View/CashRegisterView.xaml
@@ -33,7 +33,7 @@
                         <StackLayout BindableLayout.ItemsSource="{Binding Categories}" Spacing="4"  Orientation="Horizontal">
                             <BindableLayout.ItemTemplate>
                                 <DataTemplate>
-                                    <Button Text="{Binding Name}" Clicked="SelectCategory" BackgroundColor="{Binding ActualColor}" TextColor="Black" BorderColor="Black" BorderWidth="2" WidthRequest="80" HeightRequest="60" CornerRadius="8"/>
+                                    <Button Text="{Binding Name}" FontSize="12" Padding="2" Clicked="SelectCategory" BackgroundColor="{Binding ActualColor}" TextColor="Black" BorderColor="Black" BorderWidth="2" WidthRequest="80" HeightRequest="60" CornerRadius="8"/>
                                 </DataTemplate>
                             </BindableLayout.ItemTemplate>
                         </StackLayout>
@@ -44,7 +44,7 @@
                         <FlexLayout Direction="Row" Wrap="Wrap" JustifyContent="Start" AlignItems="Start" VerticalOptions="Start" BindableLayout.ItemsSource="{Binding Items}">
                             <BindableLayout.ItemTemplate>
                                 <DataTemplate>
-                                    <Button Text="{Binding Name}" Clicked="SelectItem" BackgroundColor="{Binding Category.ActualColor}" TextColor="Black" Margin="4" WidthRequest="80" HeightRequest="60" CornerRadius="8"/>
+                                    <Button Text="{Binding Name}" Padding="2" FontSize="12" Clicked="SelectItem" BackgroundColor="{Binding Category.ActualColor}" TextColor="Black" Margin="4" WidthRequest="80" HeightRequest="60" CornerRadius="8"/>
                                 </DataTemplate>
                             </BindableLayout.ItemTemplate>
                         </FlexLayout>
@@ -52,7 +52,7 @@
                 </Grid>
 
                 <!-- Receipt -->
-                <Frame Grid.Column="1" BackgroundColor="LightGray" Padding="0" CornerRadius="4" HasShadow="False" WidthRequest="180">
+                <Frame Grid.Column="1" BackgroundColor="LightGray" Padding="0" CornerRadius="4" HasShadow="False" WidthRequest="160">
                     <StackLayout  Orientation="Vertical" Padding="4">
                         <Label Style="{StaticResource BigLabel}" Text="Receipt" FontSize="18"/>
                         
